<resources>
    <string name="app_name_n">NutriLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">NutriLife</string>
    <string name="string_login_user_hint">Usuario</string>
    <string name="string_login_pass_hint">Contraseña</string>
    <string name="string_login_btn">Entrar</string>
    <string name="txt_bv_login">Bienvenido. Por favor inicie sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
