<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="12dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_food_round"/>

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_n"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <TextView
            android:textStyle="italic|bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_bv_login"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:background="@drawable/bg_edit_text"
            android:id="@+id/et_user"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/string_login_user_hint"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

        <EditText
            android:id="@+id/et_pass"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/string_login_pass_hint"
            android:layout_marginLeft="16dp"
            android:background="@drawable/bg_edit_text"
            android:layout_marginRight="16dp"/>
        <Button
            android:background="@color/secondaryDarkColor"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/string_login_btn"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textColor="@color/secondaryTextColor"
            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="0dp" />
    </LinearLayout>

</RelativeLayout>